# Crops

./: Dockerfile.txt  app.py  pyproject.toml  render.yaml.txt  requirements.txt
data/: evaluation_results_Center_Autumn_Oranges.xlsx  evaluation_results_Center_Autumn_Persimmons.xlsx  evaluation_results_Center_Autumn_Pomelo.xlsx  evaluation_results_Center_Autumn_Pumpkin.xlsx  evaluation_results_Center_Spring_Cabbage.xlsx  evaluation_results_Center_Spring_Kohlrabi.xlsx  evaluation_results_Center_Spring_Sweet Potatoes.xlsx  evaluation_results_Center_Summer_Cabbage.xlsx  evaluation_results_Center_Summer_Corn.xlsx  evaluation_results_Center_Summer_Eggplants.xlsx  evaluation_results_Center_Summer_Peaches.xlsx  evaluation_results_Center_Winter_Clementines.xlsx  evaluation_results_Center_Winter_Cucumbers.xlsx  evaluation_results_Center_Winter_Oranges.xlsx  evaluation_results_Center_Winter_Pomelo.xlsx  evaluation_results_HaSharon_Autumn_Peppers.xlsx  evaluation_results_HaSharon_Winter_Lemons.xlsx  evaluation_results_North_Autumn_Apples.xlsx  evaluation_results_North_Autumn_Clementines.xlsx  evaluation_results_North_Autumn_Cucumbers.xlsx  evaluation_results_North_Autumn_Grapefruits.xlsx  evaluation_results_North_Autumn_Peppers.xlsx  evaluation_results_North_Autumn_Pomelo.xlsx  evaluation_results_North_Spring_Carrots.xlsx  evaluation_results_North_Spring_Clementines.xlsx  evaluation_results_North_Spring_Onions.xlsx  evaluation_results_North_Summer_Beets.xlsx  evaluation_results_North_Summer_Onions.xlsx  evaluation_results_North_Winter_Broccoli.xlsx  (+21 more)
project/: requirements.txt
(+1097 files in other folders)
