[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
requires-python = "3.7"
version = "1.0.0"
name = "CropsPrediction"
dependencies = [
    "Flask==2.0.3",
    "pandas==1.4.2",
    "joblib==1.1.0",
    "scikit-learn==1.5.1",
    "xgboost==1.5.2",
    "gunicorn==20.1.0",
    "requests==2.26.0"
]